--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
-  text-align: center;
+body{
+    background-color: white;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 72px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.cards{
+    display: grid;
+    grid-template: repeat(5, 1fr)/ repeat(9, 1fr);
+    gap: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.card{
+    height: 104px;
+    width: 80px;
+    border: 0.5px solid #CDCDCD;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card.flipped .inner{
+    transform: rotateY(180deg);
+}
+
+.inner{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 0.6s cubic-bezier(0.38, 0.02, 0.09, 1.66) all;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.card .front,
+.card .back{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.card .front{
+    transform: rotateY(180deg);
+}
+
+.card .back{
+    transition: 0.3s ease all;
+}
+
+.card .back:hover,
+.restart:hover{
+    transition: 0.6s;
+    transform: scale(1.02);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.restart{
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 0.5px solid #CDCDCD;
+    background-color: white;
 }
